--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
                 <div class="col-md-6 col-lg-7 d-flex align-items-center">
                   <div class="card-body p-4 p-lg-5 text-black">
 
-                    <form method="post" action="/login">
+                    <form method="post"{# action="/login"#}>
                       <div class="d-flex align-items-center mb-3 pb-1">
                         <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                         <span class="h1 fw-bold mb-0">Growth by Self</span>
@@ -43,8 +43,8 @@
                       <a class="small text-muted" href="/forgot-pass">Forgot password?</a>
                       <p class="mb-5 pb-lg-2" style="color: #010101;">Don't have an account? <a href="/signup"
                           style="color: #ef2951;">Register here</a></p>
-                      <a href="#!" class="small text-muted">Terms of use.</a>
-                      <a href="#!" class="small text-muted">Privacy policy</a>
+                      {#<a href="#!" class="small text-muted">Terms of use.</a>
+                      <a href="#!" class="small text-muted">Privacy policy</a>#}
                     </form>
 
                   </div>
