--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -15,7 +15,7 @@
               <div class="card" style="border-radius: 1rem;">
                 <div class="card-body p-5">
 
-                  <form method="post" action="/signup">
+                  <form method="post" {#action="/signup"#}>
                     <div class="d-flex align-items-center mb-3 pb-1">
                         <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                         <span class="h1 fw-bold mb-0">Growth by Self</span>
@@ -37,12 +37,12 @@
                           <input name="conf-password" type="password" id="form3Example4cdg" class="form-control form-control-lg" placeholder="Confirm password"/>
                     </div>
 
-                    <div class="form-check d-flex justify-content-center mb-5">
+                    {#<div class="form-check d-flex justify-content-center mb-5">
                       <input name="terms" class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
                       <label class="form-check-label" for="form2Example3g">
                         I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
                       </label>
-                    </div>
+                    </div>#}
 
                     <div class="d-flex justify-content-center">
                       <button class="btn btn-dark btn-lg btn-block" type="submit">Register</button>
