fixing form errors

--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
                       <div class="pt-1 mb-4">
                         <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                       </div>
-
+                        <p>{{ get_flashed_messages() }}</p>
                       <a class="small text-muted" href="/forgot-pass">Forgot password?</a>
                       <p class="mb-5 pb-lg-2" style="color: #010101;">Don't have an account? <a href="/signup"
                           style="color: #ef2951;">Register here</a></p>
