--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -47,7 +47,7 @@
                     <div class="d-flex justify-content-center">
                       <button class="btn btn-dark btn-lg btn-block" type="submit">Register</button>
                     </div>
-
+                    <p>{{ get_flashed_messages() }}</p>
                     <p class="text-center text-muted mt-5 mb-0">Have already an account?
                         <a href="/login"
                         class="fw-bold text-body">
