migrated db to sqlite due some issues

--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="form-outline mb-4">
-                          <input name="conf-password" type="password" id="form3Example4cdg" class="form-control form-control-lg" placeholder="Confirm password"/>
+                          <input name="conf_password" type="password" id="form3Example4cdg" class="form-control form-control-lg" placeholder="Confirm password"/>
                     </div>
 
                     {#<div class="form-check d-flex justify-content-center mb-5">
