--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,7 @@
 body{
     text-align: center;
     font-family: "Copperplate Gothic Bold", "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
+    background-color: grey;
 }
  header{
      font-family: "Copperplate Gothic Bold", "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
