--- a/templates/index.html
+++ b/templates/index.html
@@ -5,22 +5,71 @@
 {% block css %}{% endblock %}
 
 {% block body %}
-    <h1>Notes</h1>
+    <hr>
+    <h2>{{ user.username|title }}'s Notes</h2>
     <ul class="list-group list-group-flush" id="notes">
       {% for note in user.notes %}
-      <li class="list-group-item">
-        {{ note.data }}
-        <button type="button" class="close" onClick="deleteNote({{ note.id }})">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </li>
+          <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+            <div class="container h-100">
+              <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                  <div class="card" style="border-radius: 1rem; background-color: #9A616D;">
+                    <div class="card-body p-5">
+                      <li class="list-group-item">
+                          <h5>{{ note.title }}</h5>
+                          <p>{{ note.content }}</p>
+                          <span>
+                              <p>Created on: {{ note.date_created.strftime("%m/%d/%Y, %H:%M:%S") }}</p>
+                              <p>Last Edited: {{ note.last_edited.strftime("%m/%d/%Y, %H:%M:%S") }}</p>
+                          </span>
+                          <button type="button" class="close" style="background-color: #ef2f51;">
+                              <a href="/delete-note/{{ note.id }}">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                      <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
+                                      <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
+                                  </svg>
+                              </a>
+                              <i class="bi bi-trash"></i>
+                          </button>
+                          <button type="button" class="close" style="background-color: #1fff41;">
+                              <a href="/edit-note/{{ note.id }}">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
+                                      <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
+                                  </svg>
+                              </a>
+                              <i class="bi bi-pen"></i>
+                          </button>
+                      </li>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </div>
+          <br>
       {% endfor %}
     </ul>
-    <form method="POST">
-      <textarea name="note" id="note" class="form-control"></textarea>
-      <br />
-      <div>
-        <button type="submit" class="btn btn-primary">Add Note</button>
-      </div>
-    </form>
+    <hr>
+    <h1>Add a New Note</h1>
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3" style="width: 100%;">
+            <div class="container h-100">
+              <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                  <div class="card" style="border-radius: 1rem;">
+                    <div class="card-body p-5">
+                        <form method="POST">
+                            <input type="text" name="title" class="form-control" placeholder="Note Title" style="font-size: 16px;">
+                            <br>
+                            <textarea name="note" id="note" class="form-control" placeholder="Write your thoughts, course notes, etc..." style="width: 100%;height: 500px;padding: 12px 20px;background-color: #f8f8f8;font-size: 16px;resize: none;"></textarea>
+                            <br />
+                            <div class="d-flex justify-content-center">
+                                <button class="btn btn-dark btn-lg btn-block" type="submit">Add Note</button>
+                            </div>
+                        </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 {% endblock %}
