--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     {% block css %}{% endblock %}
 </head>
 <body>
-    {% include "header.html" %}
+    {% include "includes/header.html" %}
     <div class="container">
     {% block body %}
 
