--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
 {% block css %}{% endblock %}
 
 {% block body %}
-    <hr>
     <h2>{{ user.username|title }}'s Notes</h2>
     <ul class="list-group list-group-flush" id="notes">
       {% for note in user.notes %}
@@ -56,7 +55,7 @@
           <br>
       {% endfor %}
     </ul>
-    <hr>
+    <hr style="border-top: 5px dashed crimson;">
     <h1>Add a New Note</h1>
     <div class="mask d-flex align-items-center h-100 gradient-custom-3" style="width: 100%;">
             <div class="container h-100">
