--- a/templates/view-note.html
+++ b/templates/view-note.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home Page{% endblock %}
+{% block title %}View {{ note.title }}{% endblock %}
 
 {% block css %}{% endblock %}
 
